chang paramter
